# UpdateManager

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/diagrams/: Communication.drawio
src/: client.rs  config_creator.rs  lib.rs  main.rs  server_starter.rs
src/comm/: client.rs  conn.rs  conn_event.rs  conn_state.rs  mod.rs  protocol.rs  server.rs  session.rs
src/util/: cli.rs  config.rs  constants.rs  encryption.rs  files.rs  hash.rs  mod.rs  observer.rs  process_handling.rs
src/util/observer/: identifiable_event.rs  mod.rs  observer.rs
src/util/resource_bundle/: locale.rs  mod.rs  resource_bundle.rs
src/util/tui/: tui.rs
tests/: cmd_parsing_test.rs  config_test.rs  conn_test.rs  hash_test.rs
