[package]
name = "update_manager"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "server"
path = "src/server_starter.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "config_creator"
path = "src/config_creator.rs"

[dependencies]
sha256 = "1.6.0"
json = "0.12.4"
ratatui = "0.29.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
tui-input = "0.14.0"

[dev-dependencies]
tempfile = "3.10"
